flask-helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
spec:
  rules:
  - host: "app.flaskapp.kyle.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flask-service
            port:
              number: 5000
  - host: "*.flaskapp.kyle.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service2
            port:
              number: 5000
